--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'application'
 
-
-mainClassName = 'mitienda.userapp.Main'
+group = 'co.edu.eam.disenosoftware'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
     jcenter()
