--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'application'
 group = 'co.edu.eam.disenosoftware'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+mainClassName = ''
 
 repositories {
     jcenter()
